--- a/config/database.yml
+++ b/config/database.yml
@@ -5,21 +5,28 @@
 #   gem "sqlite3"
 #
 default: &default
-  adapter: sqlite3
+  adapter: postgresql
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   timeout: 5000
 
 development:
   <<: *default
-  database: db/development.sqlite3
+  database: server_monitor_development
+  host: localhost
+  username: postgres
+  password: password
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/test.sqlite3
+  database: server_monitor_test
+  host: localhost
+  username: postgres
+  password: password
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  database: server_monitor_production
+  database: <%= ENV.fetch("DATABASE_URL") {""} %>
