--- a/test/fixtures/heartbeats.yml
+++ b/test/fixtures/heartbeats.yml
@@ -4,8 +4,14 @@
 # model remove the "{}" from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-one: {}
+success:
+  status_code: 500
+  request_time: <%= Time.now %>
+  server: one
 # column: value
 #
-two: {}
+unsuccessful:
+  status_code: 404
+  request_time: <%= Time.now %>
+  server: two
 # column: value
