--- a/test/fixtures/organisations_users.yml
+++ b/test/fixtures/organisations_users.yml
@@ -4,8 +4,12 @@
 # model remove the "{}" from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-one: {}
+one:
+  organisation: one
+  user: one
 # column: value
 #
-two: {}
+two:
+  organisation: two
+  user: two
 # column: value
