--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -4,8 +4,13 @@
 # model remove the "{}" from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-one: {}
+one:
+  email: "one@example.com"
+  encrypted_password: <%= User.new.send(:password_digest, 'password') %>
+
 # column: value
 #
-two: {}
+two:
+  email: "two@example.com"
+  encrypted_password: <%= User.new.send(:password_digest, 'password') %>
 # column: value
